深度图预览

--- a/win/src/CMakeLists.txt
+++ b/win/src/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.10)
 
 
 # 设置源文件变量
-SET(LOCAL_SRC_FILES color_viewer.cpp ./Common/Render.cpp ./Common/Util.cpp)
+SET(Color_SRC color_viewer.cpp ./Common/Render.cpp ./Common/Util.cpp)
 
 # 设置头文件搜索路径
 set(CMAKE_INCLUDE_DIRECTORIES_BEFORE on)
@@ -24,12 +24,15 @@ if (POLICY CMP0072)
 endif ()
 find_package(OpenGL REQUIRED)
 include_directories(${OPENGL_INCLUDE_DIRS})
-
-add_executable(color_viewer ${LOCAL_SRC_FILES})
+# color_viewer
+add_executable(color_viewer ${Color_SRC})
 target_link_libraries(color_viewer freeglut ${OPENGL_LIBRARIES})
-
 target_link_libraries(color_viewer ImiCamera)
 target_link_libraries(color_viewer iminect)
-
-
+# DepthViewer
+SET(Depth_SRC DepthViewer.cpp ./Common/Render.cpp ./Common/Util.cpp)
+add_executable(depth_viewer ${Depth_SRC})
+target_link_libraries(depth_viewer freeglut ${OPENGL_LIBRARIES})
+target_link_libraries(depth_viewer ImiCamera)
+target_link_libraries(depth_viewer iminect)
 
