--- a/win/src/CMakeLists.txt
+++ b/win/src/CMakeLists.txt
@@ -56,3 +56,9 @@ add_executable(UVC ${UVC_SRC})
 target_link_libraries(UVC freeglut ${OPENGL_LIBRARIES})
 target_link_libraries(UVC ImiCamera)
 target_link_libraries(UVC iminect)
+## 打开不带UVC彩色流和深度图
+SET(Two_stream_SRC open_two_stream.cpp ./Common/Render.cpp ./Common/Util.cpp)
+add_executable(Two_stream ${Two_stream_SRC})
+target_link_libraries(Two_stream freeglut ${OPENGL_LIBRARIES})
+target_link_libraries(Two_stream ImiCamera)
+target_link_libraries(Two_stream iminect)
