只能同时打开一路流

--- a/win/src/CMakeLists.txt
+++ b/win/src/CMakeLists.txt
@@ -72,3 +72,4 @@ add_executable(Two_stream ${Two_stream_SRC})
 target_link_libraries(Two_stream freeglut ${OPENGL_LIBRARIES})
 target_link_libraries(Two_stream ImiCamera)
 target_link_libraries(Two_stream iminect)
+target_link_libraries(Two_stream ${OpenCV_LIBS})
